Revision history for {{$dist->name}}

{{$NEXT}}
        - fix argument handling: pass-through to TAP::DOM, delete
          newly introduced 'disable_global_kv_data'
        - TAP::Archive reading skips nonexistent files from meta.yml
        - to_tap() works with unblessed inner elements (though the
          TAP::DOM itself needs bless to call ->to_tap method).

0.14      2017-02-17
        - new module TAP::DOM::Archive to extract TAP::Archive files
          into a multi-document super DOM

        - Store "# Test-key: value" entries also as 'kv_data' under
          their parent ok line.

          Please note, this creates redundancy with global
          'document_data' as it still stores entries there. This is to
          keep backwards compatibility with existing TAP documents'
          DOM.

          If you want clear separation between global 'document_data'
          from #Test-key:value entries not belonging to a test
          ok/notok line and 'kv_data' entries, then set option
          'disable_global_kv_data'.

0.13      2016-02-26
        - add forgotten 'planned' attribute from ::Aggregator

0.12      2015-09-16
        - generate "document_data" key/value entry in the TAP-DOM
          from hot comments of the form: # Test-<key>: <value>

0.11      2014-03-14
        - assume TAP version 13 if TAP::Parser supports this (v3.22+)
        - TAP-DOM "reverse": to_tap() produces TAP from a TAP::DOM
        - distro polishing (misc & rt#90178)
        - Дист::Зилла roundhouse kick

2010-08-26  Steffen Schwigon  <ss5@renormalist.net>

	* 0.10

	* New option "usebitsets":
	- When creating a TAP::DOM with new(usebitsets => 1) then all
	  the 'has_*' and 'is_*' attributes are stored in a common
	  bitset entry 'is_has' with their respective bits set.
	  This reduces the size of a TAP::DOM remarkably (by ~40%
	  for a large TAP-DOM) and is meant as an optimization
	  option for memory constrained problems.
